# xirc

./: CMakeLists.txt  README.md
src/: main.cpp
src/code/: channels.cpp  connection.cpp  input.cpp  style.cpp
src/headers/: channels.hpp  connection.hpp  input.hpp  style.hpp
